# the-lm-kindergarten

./: .gitignore  LLM_fine_tune.ipynb  README.md  metacentrum_cuda_available.sh  pyproject.toml
.github/workflows/: main.yml
Finetuning_bugfixes_and_comments/BugFixed_scripts/: train_eval.ipynb  train_eval_task1.ipynb  train_eval_task2_WIP.ipynb
data/: syllogisms_generator.ipynb  train_data_formal_subtask1.json
data/1/: generate_syllogisms.py  subtask_1_syntheric_data_2.json  syllogisms_generation_pipeline.ipynb  train_data_subtask_1_2_levels.json
data/2/: data.json  data.jsonl  train_data.json  valid_data.json
data/subtask 2/: train_data.json
datasets/: README.txt  merger.py  splitter.py  train.json  validation.json
datasets/mess/: merged_train.json  new_synthetic_purified.json  train_data_original_purified.json  train_data_original_purified_uncertain.json  train_data_original_purified_uncertain_count.json
error_analysis_tools/: README_checker.txt  output.json  summary.json  syllogism_correctness_checker.py
fine_tunning/matus/: LLM_fine_tune.ipynb  LoRa_Lamma_setup_for_inference.py  LoRa_training_setup.py
scripts/: evaluation_job.sh  training_job.sh
src/: cli.py  common.py  generator.py  inference.py  prompt.j2  training.py
src/evaluation/: evaluation.py  evaluation_official.py
src/fine_tuning/: example_finetuning_script_outdated.py  grpo.py  jachym_experiments.py
src/generator/: syllogisms.ipynb  task1.py
src/prompts/: solver.j2  solver_thinking.j2
src/training/: grpo_lora.py  lora.py
src/util/: check_duplicates.py  hashing.py  (+2 more)
