[project]
name = "SemEval-2026-11"
version = "0.1.0"
description = "The LM Kindergarten's solution for SemEval-2026 Task 11: Disentangling Content and Formal Reasoning in Large Language Models."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "huggingface-hub>=1.9.0",
    "mlflow>=3.11.0rc0",
    "peft>=0.18.1",
    "torch>=2.11.0",
    "transformers>=5.5.0",
    "trl>=1.0.0",
]
