[project]
name = "SemEval-2026-11"
version = "0.1.0"
description = "The LM Kindergarten's solution for SemEval-2026 Task 11: Disentangling Content and Formal Reasoning in Large Language Models."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "flash-linear-attention>=0.4.2",
    "jinja2>=3.1.6",
    "torch>=2.11.0",
    "transformers>=5.5.0",
]
